@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
enum "::ItemType" as C_0009506588567340924694
enum C_0009506588567340924694 {
WEAPON
ARMOR
ACCESSORY
RANDOM
}
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
class "::Accessory" as C_0001733752998306711321
class C_0001733752998306711321 {
+Accessory() = default : void
+Accessory(std::string_view name, std::string_view desc, int default_price, int price) : void
..
+getItemType() const : ItemType
+toJson() const : QJsonObject
__
}
}
}
}
C_0005967165952864249862 ..> C_0009506588567340924694
C_0001733752998306711321 ..> C_0009506588567340924694
C_0005967165952864249862 <|-- C_0001733752998306711321

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
